welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:4: error: type mismatch;
 found   : Unit
 required: Int
	while (m<nums.length){
        ^